<resources>
    <string name="app_name">Ghazeih DALEEL</string>
    <string name="daleel_ghazeih">DALEEL - Ghazeih</string>
    <string name="search">Search</string>
    <string name="contact_image">Contact Image</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="facebook">Facebook</string>
    <string name="website">Website</string>
    <string name="emergency">Emergency</string>
    <string name="deliverey">Deliverey</string>
    <string name="fast_food">Fast food</string>
    <string name="medical">Medical</string>
    <string name="workers">Workers</string>
    <string name="teaching">Teaching</string>
    <string name="shisha">Shisha</string>
    <string name="contact_list">Contacts List</string>
    <string name="add_contact">Add Contact</string>
    <string name="upload">Upload</string>
    <string name="facebookLink">Facebook Timeline URL</string>
    <string name="dental_clinics">Dental Clinics</string>
    <string name="doctors_clinics">Doctors Clinics</string>
    <string name="hospitals_and_medical_centers">Hospitals and Medical Centers</string>
    <string name="police_station_maghdoucheh">Police station (Maghdoucheh)</string>
    <string name="ministry_of_interior_and_municipalities_n_police_operation">Ministry Of Interior and Municipalities \n Police (operation)</string>
    <string name="lebanese_red_cross_saida">Lebanese Red Cross (Saida)</string>
    <string name="al_resala_association">Al- Resala association</string>
    <string name="fire_station_saida">Fire Station (Saida)</string>
    <string name="might_add_later">might be aded later :)</string>
    <string name="upload_aproval_message">Uploadded Successfully waiting for admin approval</string>
    <string name="error_message">Something goes wrong</string>
    <string name="dialog1">\"Please make sure to fill in all required fields with correct information \n \"</string>
    <string name="dialog2">repeated or wrong information will be ignored \n</string>
    <string name="dialog3">for inquiries please contact: \n</string>
    <string name="ok">ok</string>
    <string name="taxi">taxi</string>
</resources>