<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/colorPrimaryLight"
    tools:context=".Medical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:onClick="dental_intent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="true"
                    android:cropToPadding="false"
                    app:srcCompat="@drawable/dental"
                    android:contentDescription="@string/dental_clinics" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="27sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/dental_clinics" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="doctor_intent"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="true"
                    android:cropToPadding="false"
                    app:srcCompat="@drawable/doctor"
                    android:contentDescription="@string/doctors_clinics" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="27sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/doctors_clinics" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="hospitals_and_medical_centers_intent"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="true"
                    android:cropToPadding="false"
                    app:srcCompat="@drawable/hospital"
                    android:contentDescription="@string/hospitals_and_medical_centers" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="27sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/hospitals_and_medical_centers" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>




    </LinearLayout>

</ScrollView>